WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
REOPENED
265234
Include CSSSelectorParserContext.h instead of CSSSelectorParser.h
https://bugs.webkit.org/show_bug.cgi?id=265234
Summary
Include CSSSelectorParserContext.h instead of CSSSelectorParser.h
Tim Nguyen (:ntim)
Reported
2023-11-21 23:50:46 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-11-21 23:52:28 PST
<
rdar://problem/118708846
>
Tim Nguyen (:ntim)
Comment 2
2023-11-21 23:52:59 PST
Pull request:
https://github.com/WebKit/WebKit/pull/20811
EWS
Comment 3
2023-11-22 00:26:43 PST
Committed
271042@main
(aaa5662c43e3): <
https://commits.webkit.org/271042@main
> Reviewed commits have been landed. Closing PR #20811 and removing active labels.
WebKit Commit Bot
Comment 4
2023-11-23 04:56:03 PST
Re-opened since this is blocked by
bug 265283
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug