Source/WebCore/css/CSSComputedStyleDeclaration.cpp
@@ -29,7 +29,7 @@
 #include "CSSPropertyAnimation.h"
 #include "CSSPropertyParser.h"
 #include "CSSSelector.h"
-#include "CSSSelectorParser.h"
+#include "CSSSelectorParserContext.h"
 #include "CSSValuePool.h"
 #include "ComposedTreeAncestorIterator.h"
 #include "ComputedStyleExtractor.h"
